[package]
name = "subruster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"] }
rand = "0.8.0"
rayon = "1.5"
regex = "1.5.4"
trust-dns-resolver = "0.19.4"
tokio = { version = "0.2.18", features = ["full"] }
anyhow = "1.0.28"
chrono = "0.4.19"